--- a/.github/workflows/cleanup_compute_instance.yml
+++ b/.github/workflows/cleanup_compute_instance.yml
@@ -8,6 +8,9 @@ on:
   schedule:
     - cron: "41 21 * * *" # Every day starting at 5:41 BJT
   pull_request:
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 env:
