--- a/.github/workflows/cleanup_compute_instance_space.yml
+++ b/.github/workflows/cleanup_compute_instance_space.yml
@@ -43,6 +43,6 @@ jobs:
       - name: Delete folders
         working-directory: ${{ github.workspace }}/src/promptflow/tests/test_configs/flows/delete_folder
         run: |
-          az account set -s $test_workspace_sub_id
-          az configure --defaults group=$test_workspace_rg workspace=$test_workspace_name
+          az account set -s ${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          az configure --defaults group=${{ secrets.TEST_WORKSPACE_RG }} workspace=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
           pfazure run create --flow . --data ./data.jsonl --runtime example-runtime-ci
