--- a/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
@@ -7,28 +7,24 @@ promptflow.tools.open_source_llm.OpenSourceLLM.call:
   class_name: OpenSourceLLM
   function: call
   inputs:
-    endpoint_name:
+    connection:
       type:
       - string
       dynamic_list:
-        func_path: promptflow.tools.open_source_llm.list_endpoint_names
+        func_path: promptflow.tools.open_source_llm.list_connection_names
       allow_manual_entry: false
       is_multi_select: false
-    connection:
-      default: null
-      type:
-      - CustomConnection
     deployment_name:
       type:
       - string
       dynamic_list:
         func_path: promptflow.tools.open_source_llm.list_deployment_names
         func_kwargs:
-        - name: endpoint_name
+        - name: connection
           type: 
           - string
           optional: true # need to understand if this is blocking or not on the manual entry.
-          reference: ${inputs.endpoint_name} 
+          reference: ${inputs.connection} 
       allow_manual_entry: true
       is_multi_select: false
     api:
