--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -24,7 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest_mock
-          pip install azure-identity azure-keyvault-secrets azure-ai-ml
+          pip install azure-identity azure-keyvault-secrets
+          pip install azure-ai-ml
           pip install -r ./src/promptflow-tools/requirements.txt
       - name: Generate configs
         run: |
