--- a/.github/workflows/promptflow-release-testing-matrix.yml
+++ b/.github/workflows/promptflow-release-testing-matrix.yml
@@ -21,10 +21,33 @@ jobs:
   id:
     runs-on: ubuntu-latest
     steps:
-      - name: workflow run id - ${{ inputs.id }}
-        run: |
-          echo "workflow run id: ${{ inputs.id }}"
-  all_tests:
+    - name: workflow run id - ${{ inputs.id }}
+      run: |
+        echo "workflow run id: ${{ inputs.id }}"
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4
+    - name: Python Setup - 3.9
+      uses: "./.github/actions/step_create_python_environment"
+      with:
+        pythonVersion: 3.9
+    - name: Build wheel
+      uses: "./.github/actions/step_sdk_setup"
+      with:
+        setupType: promptflow_with_extra
+        scriptPath: ${{ env.testWorkingDirectory }}
+    - name: Upload Wheel
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: wheel
+        path: |
+          ${{ github.workspace }}/src/promptflow/dist/*.whl
+          ${{ github.workspace }}/src/promptflow-tools/dist/*.whl
+  promptflow_tests:
+    needs: build
     strategy:
       fail-fast: false
       matrix:
@@ -36,18 +59,13 @@ jobs:
     - name: checkout
       uses: actions/checkout@v3
     - name: Display and Set Environment Variables
-      run: 
+      run:
         env | sort >> $GITHUB_OUTPUT
       shell: bash -el {0}
     - name: Python Env Setup - ${{ matrix.os }} - Python Version ${{ matrix.pythonVersion }}
       uses: "./.github/actions/step_create_python_environment"
       with:
         pythonVersion: ${{ matrix.pythonVersion }}
-    - name: Build wheel
-      uses: "./.github/actions/step_sdk_setup_win"
-      with:
-        setupType: promptflow_with_extra
-        scriptPath: ${{ env.testWorkingDirectory }}
     - name: Azure Login
       uses: azure/login@v1
       with:
