--- a/.github/workflows/promptflow-sdk-cli-azure-unit-test.yml
+++ b/.github/workflows/promptflow-sdk-cli-azure-unit-test.yml
@@ -13,6 +13,7 @@ env:
   testWorkingDirectory: ${{ github.workspace }}/src/promptflow
   PYTHONPATH: ${{ github.workspace }}/src/promptflow
   IS_IN_CI_PIPELINE: "true"
+  PROMPT_FLOW_TEST_MODE: "replay"  # pfazure might need this due for the init of Azure CLI
 
 jobs:
   sdk_cli_azure_unit_test:
