--- a/.github/workflows/tools_release_tag.yml
+++ b/.github/workflows/tools_release_tag.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Get last tag version
         run: |
-          version=$(git tag | tail -1)
+          version=$(git tag -l '*-tools' | sort -V | tail -n 1)
           echo "last_tag_version=$version" >> $GITHUB_ENV
 
       - name: Generate release notes
