--- a/src/promptflow/tests/test_configs/flows/chat_flow_with_image/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/chat_flow_with_image/flow.dag.yaml
@@ -25,7 +25,7 @@ inputs:
     - data:image/png;path: logo_2.png
     is_chat_input: true
 outputs:
-  output:
+  answer:
     type: string
     reference: ${mock_chat_node.output}
     is_chat_output: true
