--- a/examples/tools/tool-package-quickstart/my_tool_package/yamls/tool_with_generated_by_input.yaml
+++ b/examples/tools/tool-package-quickstart/my_tool_package/yamls/tool_with_generated_by_input.yaml
@@ -36,7 +36,7 @@ my_tool_package.tools.tool_with_generated_by_input.my_tool:
       type: 
       - string
       enabled_by: index_type
-      enabled_by_value: [MLIndex]
+      enabled_by_value: [Azure Cognitive Search]
       dynamic_list:
         func_path: my_tool_package.tools.tool_with_generated_by_input.list_indexes
         func_kwargs: 
@@ -52,7 +52,7 @@ my_tool_package.tools.tool_with_generated_by_input.my_tool:
       type:
       - string
       enabled_by: index_type
-      enabled_by_value: [MLIndex]
+      enabled_by_value: [Azure Cognitive Search]
       dynamic_list:
         func_path: my_tool_package.tools.tool_with_generated_by_input.list_content_field
         func_kwargs: 
@@ -66,7 +66,7 @@ my_tool_package.tools.tool_with_generated_by_input.my_tool:
       type:
       - string
       enabled_by: index_type
-      enabled_by_value: [MLIndex]
+      enabled_by_value: [Azure Cognitive Search]
       dynamic_list:
         func_path: my_tool_package.tools.tool_with_generated_by_input.list_embedding_deployment
         func_kwargs: 
