--- a/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
@@ -15,7 +15,7 @@ promptflow.tools.open_source_llm.OpenSourceLLM.call:
       allow_manual_entry: false
       is_multi_select: false
     deployment_name:
-      default: null
+      default: ''
       type:
       - string
       dynamic_list:
