--- a/.github/actions/step_create_python_environment/action.yml
+++ b/.github/actions/step_create_python_environment/action.yml
@@ -1,5 +1,9 @@
 name: step_create_python_environment
 inputs:
+  pipFilePath:
+    required: false
+    default: "src/promptflow/dev_requirements.txt"
+    type: string
   pythonVersion:
     required: false
     default: "3.9"
@@ -13,4 +17,5 @@ runs:
       python-version: ${{ inputs.pythonVersion }}
   - run: |
       python -m pip install --upgrade pip
+      pip install -r ${{ inputs.pipFilePath }}
     shell: pwsh
