--- a/.github/workflows/samples_flowinpipeline_pipeline.yml
+++ b/.github/workflows/samples_flowinpipeline_pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ '{{' }} github.workspace }}/examples/config.json
       - name: Generate config.json for production workspace
         if: github.event_name != 'schedule'
-        run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON }}' > ${{ '{{' }} github.workspace }}/examples/config.json
+        run: echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON }}' > ${{ github.workspace }}/examples/config.json
       - name: Azure Login
         uses: azure/login@v1
         with:
