--- a/.github/actions/step_create_python_environment/action.yml
+++ b/.github/actions/step_create_python_environment/action.yml
@@ -18,4 +18,5 @@ runs:
   - run: |
       python -m pip install --upgrade pip
       pip install -r ${{ inputs.pipFilePath }}
+      pip freeze
     shell: pwsh
