--- a/.github/workflows/promptflow-release-testing-matrix-alter.yml
+++ b/.github/workflows/promptflow-release-testing-matrix-alter.yml
@@ -21,33 +21,51 @@ jobs:
   id:
     runs-on: ubuntu-latest
     steps:
-      - name: workflow run id - ${{ inputs.id }}
-        run: |
-          echo "workflow run id: ${{ inputs.id }}"
-  all_tests:
+    - name: workflow run id - ${{ inputs.id }}
+      run: |
+        echo "workflow run id: ${{ inputs.id }}"
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4
+    - name: Python Setup - 3.9
+      uses: "./.github/actions/step_create_python_environment"
+      with:
+        pythonVersion: 3.9
+    - name: Build wheel
+      uses: "./.github/actions/step_sdk_setup"
+      with:
+        setupType: promptflow_with_extra
+        scriptPath: ${{ env.testWorkingDirectory }}
+    - name: Upload Wheel
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: wheel
+        path: |
+          ${{ github.workspace }}/src/promptflow/dist/*.whl
+          ${{ github.workspace }}/src/promptflow-tools/dist/*.whl
+  promptflow_tests:
+    needs: build
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         testType: [sdk-cli, executor]
-        pythonVersion: ['3.8', '3.9', '3.10', '3.11']
+        pythonVersion: ['3.8']
     runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
       uses: actions/checkout@v3
     - name: Display and Set Environment Variables
-      run: 
+      run:
         env | sort >> $GITHUB_OUTPUT
       shell: bash -el {0}
     - name: Python Env Setup - ${{ matrix.os }} - Python Version ${{ matrix.pythonVersion }}
       uses: "./.github/actions/step_create_python_environment"
       with:
         pythonVersion: ${{ matrix.pythonVersion }}
-    - name: Build wheel
-      uses: "./.github/actions/step_sdk_setup_win"
-      with:
-        setupType: promptflow_with_extra
-        scriptPath: ${{ env.testWorkingDirectory }}
     - name: Azure Login
       uses: azure/login@v1
       with:
@@ -56,9 +74,6 @@ jobs:
       uses: "./.github/actions/step_generate_configs"
       with:
         targetFolder: ${{ env.testWorkingDirectory }}
-    - name: Get number of CPU cores
-      uses: SimenB/github-actions-cpu-cores@v1
-      id: cpu-cores
     - name: Run SDK CLI Test
       if : ${{ matrix.testType == 'sdk-cli' }}
       shell: pwsh
@@ -71,7 +86,7 @@ jobs:
           -t ${{ github.workspace }}/src/promptflow/tests/sdk_cli_azure_test ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test `
           -l eastus `
           -m "unittest or e2etest" `
-          -n ${{ steps.cpu-cores.outputs.count }}
+          -n auto
         mv ${{ github.workspace }}/${{ env.testWorkingDirectory }}/test-results.xml ${{ github.workspace }}/test-results-sdk-cli.xml
     - name: Run Executor Test
       if : ${{ matrix.testType == 'executor' }}
@@ -95,21 +110,3 @@ jobs:
       with:
         name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
         path: ${{ github.workspace }}/*.xml
-  publish-test-results:
-    name: "Publish Tests Results"
-    needs:
-      - all_tests
-    runs-on: ubuntu-latest
-    permissions: write-all
-    if: always()
-
-    steps:
-    - name: checkout
-      uses: actions/checkout@v3
-    - name: Publish Test Results
-      uses: "./.github/actions/step_publish_test_results"
-      with:
-        testActionFileName: promptflow-release-testing-matrix.yml
-        testResultTitle: Release Test Matrix
-        token: ${{ secrets.GITHUB_TOKEN }}
-        coverageThreshold: 0
