--- a/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
@@ -1,8 +1,9 @@
-promptflow.tools.openai_gpt4v.chat:
+promptflow.tools.openai_gpt4v.OpenAI.chat:
   name: OpenAI GPT-4V
   description: Use OpenAI GPT-4V to leverage vision ability.
   type: custom_llm
   module: promptflow.tools.openai_gpt4v
+  class_name: OpenAI
   function: chat
   default_prompt: |
     # system:
