--- a/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
@@ -18,6 +18,17 @@ promptflow.tools.openai_gpt4v.OpenAI.chat:
       type:
         - OpenAIConnection
     model:
+      enum:
+      - gpt-4-vision-preview
+      - gpt-4-1106-preview
+      - gpt-4
+      - gpt-4-0314
+      - gpt-4-32k
+      - gpt-4-32k-0314
+      - gpt-3.5-turbo-1106
+      - gpt-3.5-turbo
+      - gpt-3.5-turbo-0301
+      - gpt-3.5-turbo-16k
       type:
         - string
     temperature:
