--- a/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
@@ -29,6 +29,7 @@ promptflow.tools.openai_gpt4v.OpenAI.chat:
       - gpt-3.5-turbo
       - gpt-3.5-turbo-0301
       - gpt-3.5-turbo-16k
+      allow_manual_entry: true
       type:
         - string
     temperature:
